Updated Custom Distributions (markdown)